--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "launchdarkly-js-client-sdk": "^2.16.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "^16.12.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
