--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "jest": "^25.1.0",
     "prop-types": "^15.7.2",
+    "react": "^16.12.0",
     "react-test-renderer": "16.13.1"
   }
 }
