add missing releaser manifest data

--- a/.ldrelease/config.yml
+++ b/.ldrelease/config.yml
@@ -1,6 +1,12 @@
+repo:
+  public: gatsby-plugin-launchdarkly
+
 template:
   name: npm
 
 publications:
   - url: https://www.npmjs.com/package/gatsby-plugin-launchdarkly
     description: npm
+
+documentation:
+  githubPages: false
