--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple plugin that integrates LaunchDarkly into your Gatsby site. This will allow you to use feature flags to rollout new features on your site.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint **/*.js",
+    "lint": "eslint .",
     "test": "jest"
   },
   "keywords": [
@@ -36,7 +36,7 @@
     "@babel/preset-env": "7.9.0",
     "@babel/preset-react": "7.9.4",
     "babel-jest": "25.1.0",
-    "eslint": "6.8.0",
+    "eslint": "8.3.0",
     "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
