--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@babel/preset-react": "7.9.4",
     "babel-jest": "25.1.0",
     "eslint": "8.3.0",
+    "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jest": "23.8.2",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
