--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   "devDependencies": {
     "@babel/preset-env": "7.16.4",
     "@babel/preset-react": "7.16.0",
-    "babel-jest": "27.3.1",
+    "babel-jest": "^25.1.0",
     "eslint": "8.3.0",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jest": "25.3.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^27.3.1",
+    "jest": "^25.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-test-renderer": "17.0.2"
