--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple plugin that integrates LaunchDarkly into your Gatsby site. This will allow you to use feature flags to rollout new features on your site.",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint **/*.js",
+    "lint": "eslint .",
     "test": "jest"
   },
   "keywords": [
@@ -26,22 +26,24 @@
     "url": "https://github.com/launchdarkly/gatsby-plugin-launchdarkly/issues"
   },
   "dependencies": {
-    "launchdarkly-react-client-sdk": "^2.18.0"
+    "launchdarkly-react-client-sdk": "^2.23.3"
   },
   "peerDependencies": {
+    "gatsby": "^3.0.0 || ^4.0.0",
     "react": "^16.12.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "7.9.0",
-    "@babel/preset-react": "7.9.4",
-    "babel-jest": "25.1.0",
-    "eslint": "6.8.0",
-    "eslint-plugin-jest": "23.8.2",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
+    "@babel/preset-env": "7.16.4",
+    "@babel/preset-react": "7.16.0",
+    "babel-jest": "^25.1.0",
+    "eslint": "8.3.0",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jest": "25.3.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^25.1.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-test-renderer": "16.13.1"
+    "react": "^17.0.2",
+    "react-test-renderer": "17.0.2"
   }
 }
