--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "peerDependencies": {
     "gatsby": "^3.0.0 || ^4.0.0",
-    "react": "^16.12.0"
+    "react": "^16.12.0 || ^17.0.0"
   },
   "devDependencies": {
     "@babel/preset-env": "7.16.4",
