--- a/package.json
+++ b/package.json
@@ -30,20 +30,22 @@
   },
   "peerDependencies": {
     "gatsby": "^3.0.0 || ^4.0.0",
-    "react": "^16.12.0 || ^17.0.0"
+    "react": "^16.12.0 || ^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "7.16.4",
-    "@babel/preset-react": "7.16.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "8.3.0",
-    "eslint-plugin-import": "2.25.3",
-    "eslint-plugin-jest": "25.3.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "jest": "^29.3.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-test-renderer": "17.0.2"
+    "@babel/preset-env": "^7.22.5",
+    "@babel/preset-react": "^7.22.5",
+    "babel-jest": "^29.5.0",
+    "eslint": "^8.43.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "29.5.0",
+    "jest-environment-jsdom-global": "4.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-test-renderer": "^18.2.0"
   }
 }
