--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "launchdarkly-react-client-sdk": "^3.0.6"
   },
   "peerDependencies": {
-    "gatsby": "^3.0.0 || ^4.0.0",
-    "react": "^16.12.0 || ^17.0.0 || ^18.0.0"
+    "gatsby": "3 - 5",
+    "react": "16.12 - 18"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
